--- a/ebooks/modern/history_gy/huxueyan/hongding00.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding00.html
@@ -23,6 +23,6 @@
 <p>
 　　浙江文艺出版社
 <hr>
-<a href="hongding01.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding01.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
