--- a/ebooks/modern/history_gy/huxueyan/hongding01.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding01.html
@@ -1548,6 +1548,6 @@
 Ñ©ÑÒËµ£¬¡°²»Â÷ÄãËµ£¬ÕâÒ»Â·À´£¬ÎÒÓö¼û³¤Ã«£¬ÊµÔÚÓÐµãÅÂ£»ÏÖÔÚÎÒ²»ÅÂÁË£¬Ô½
 ÅÂÔ½ÎóÊÂ£¬Ë÷ÐÔ´óµ¨È¥´³£¬·´µ¹Ã»ÊÂ¡£¡±
 <hr>
-<a href="hongding02.html">ÏÂÒ»½Ú</a> <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="hongding02.html">ÏÂÒ»½Ú</a> <a href="content.html">»ØÄ¿Â¼</a>
 
 </body></html>
