--- a/ebooks/modern/history_gy/huxueyan/hongding02.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding02.html
@@ -859,6 +859,6 @@
 　　“但愿如此！”王有龄用低微但很清晰的声音说：“再请你转告雪岩，千万
 不必为我伤心。”
 <hr>
-<a href="hongding03.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding03.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
