--- a/ebooks/modern/history_gy/huxueyan/hongding03.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding03.html
@@ -856,6 +856,6 @@
 　　“后天一定是好日子，”阿巧姐识得的字不多，但看皇历还能应付，很有把
 握地指着十二月初一那一行说：“‘宜出门。’”
 <hr>
-<a href="hongding04.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding04.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
