--- a/ebooks/modern/history_gy/huxueyan/hongding04.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding04.html
@@ -475,6 +475,6 @@
 <p>
 　　“也只好如此。”七姑奶奶说，“到时候再说，此刻不必去伤脑筋了！”
 <hr>
-<a href="hongding05.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding05.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
