--- a/ebooks/modern/history_gy/huxueyan/hongding05.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding05.html
@@ -705,5 +705,5 @@
 或者索性出首。”“对了，难就难在这里。”胡雪岩说，“我有两句话，三叔记
 住：逢人只说三分话，未可全抛一片心。”
 <hr>
-<a href="hongding06.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding06.html">下一节</a> <a href="content.html">回目录</a>
 
