--- a/ebooks/modern/history_gy/huxueyan/hongding06.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding06.html
@@ -1298,5 +1298,5 @@
 妇俩都无留恋之意，因为对“老本行”毕竟有根深蒂固的感情在，而且又是跟胡
 雪岩在一起。相形之下，这爿小杂货店就不是“鸡肋”而是“敝屣”了。
 <hr>
-<a href="hongding07.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding07.html">下一节</a> <a href="content.html">回目录</a>
 
