--- a/ebooks/modern/history_gy/huxueyan/hongding07.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding07.html
@@ -1039,6 +1039,6 @@
 <p>
 　　“我原是说说好玩的。”
 <hr>
-<a href="hongding08.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding08.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
