--- a/ebooks/modern/history_gy/huxueyan/hongding08.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding08.html
@@ -2057,5 +2057,5 @@
 　　“也好！”左宗棠说，“以后你来，不必拘定时刻；也不一定要穿公服。还
 有，刚才我跟你谈的那件事，不必急；且看看局势再说。”
 <hr>
-<a href="hongding09.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding09.html">下一节</a> <a href="content.html">回目录</a>
 
