--- a/ebooks/modern/history_gy/huxueyan/hongding09.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding09.html
@@ -2377,6 +2377,6 @@
 　　“好极了！”左宗棠愉悦异常，“汉高成功，功在萧何。我们就这样说了；
 你尽管放手去做，一切有我担待。”
 <hr>
-<a href="hongding10.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding10.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
