--- a/ebooks/modern/history_gy/huxueyan/hongding10.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding10.html
@@ -555,6 +555,6 @@
 熟谙洋务，为船局断不可少之人，且为洋人所素信也。“好！我就交给你了！”
 左宗棠站起身，一面走向书案，一面说道：“现在要跟你谈第一件大事了！”
 <hr>
-<a href="hongding11.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding11.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
