--- a/ebooks/modern/history_gy/huxueyan/hongding11.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding11.html
@@ -550,5 +550,5 @@
 ；而左宗棠的勋业，以及胡雪岩个人的事业，亦因此而有了一个新的开始。但福
 者祸所倚，“红顶商人”胡雪岩的结局，相当凄惨；种因亦在于此！
 <hr>
-<a href="hongding12.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding12.html">下一节</a> <a href="content.html">回目录</a>
 
