--- a/ebooks/modern/history_gy/huxueyan/hongding12.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding12.html
@@ -901,6 +901,6 @@
 <p>
 　　明天，明天还不知道怎么样呢？”
 <hr>
-<a href="hongding13.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding13.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
