--- a/ebooks/modern/history_gy/huxueyan/hongding13.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding13.html
@@ -1376,6 +1376,6 @@
 它几套密码出来，行情我们自己报。”“不错。将来丝的行情，一定要自己报。”
 <hr>
 <hr>
-<a href="hongding14.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding14.html">下一节</a> <a href="content.html">回目录</a>
 
 </body></html>
