--- a/ebooks/modern/history_gy/huxueyan/hongding14.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding14.html
@@ -886,5 +886,5 @@
 <p>
 ¡¡¡¡¡°ËµµÃÊÇ£¬ÎÒ»Øº¼ÖÝ¾Í°ì¡£¡±
 <hr>
-<a href="hongding15.html">ÏÂÒ»½Ú</a> <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="hongding15.html">ÏÂÒ»½Ú</a> <a href="content.html">»ØÄ¿Â¼</a>
 
