--- a/ebooks/modern/history_gy/huxueyan/hongding15.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding15.html
@@ -892,6 +892,6 @@
 ²¡£¬ÎÒÒª×Ð×ÐÏ¸Ï¸ÏëÒ»Ïë£¬½á½áÊµÊµÄÃËü¸Äµô¡£¡±¡°Ð¡Ò¯ÊåÕâÃ´Ëµ£¬°¢ÆßÐÄÀïÒ»
 ¶¨¿íµÃ¶à¡£¡±¹ÅÓ¦´ºÐÀÈ»´ðËµ¡£
 <hr>
-<a href="hongding16.html">ÏÂÒ»½Ú</a> <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="hongding16.html">ÏÂÒ»½Ú</a> <a href="content.html">»ØÄ¿Â¼</a>
 
 </body></html>
