--- a/ebooks/modern/history_gy/huxueyan/hongding16.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding16.html
@@ -1882,5 +1882,5 @@
 动了，不断地表示，以胡雪岩现在身分，居然降尊纡贵，会去看她，是她想都不
 敢想的事。
 <hr>
-<a href="hongding17.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding17.html">下一节</a> <a href="content.html">回目录</a>
 
