--- a/ebooks/modern/history_gy/huxueyan/hongding17.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding17.html
@@ -1094,5 +1094,5 @@
 　　七姑奶奶暗暗点头，心里在想，罗四姐一定懂“挟天子以令诸侯”的道理，
 不但会做人，还会做“官”，替她担心，实在是多余的。
 <hr>
-<a href="hongding18.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding18.html">下一节</a> <a href="content.html">回目录</a>
 
