--- a/ebooks/modern/history_gy/huxueyan/hongding18.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding18.html
@@ -307,5 +307,5 @@
 ²»±È´ÓÇ°ÁË¡£¡±Á¢¿Ì¾Í»áÈÇÆðÎÞÊý²Â²â£»Ô­À´ÓÐ³ðºÞµÄ¡¢ÎÞÔ¹ÎÞ³ðÖ»ÊÇÓÉÓÚ¶Ê¼µ
 µÄ£¬Ô­ÊÇÍÆ²¨ÖúÀ½£¬´ó·ÅÒ¥ÑÔ£¬ÄÇÒ»À´ÐÅÓÃ¾ÍÒª¶¯Ò¡£¬ºó¹û²»¿°ÉèÏë¡£
 <hr>
-<a href="hongding19.html">ÏÂÒ»½Ú</a> <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="hongding19.html">ÏÂÒ»½Ú</a> <a href="content.html">»ØÄ¿Â¼</a>
 
