--- a/ebooks/modern/history_gy/huxueyan/hongding19.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding19.html
@@ -866,5 +866,5 @@
 ¡¡¡¡¿ÉÊÇ£¬ËûÊÇÕ¾ÔÚ·´¶ÔË¿³§Õâ·½ÃæµÄ£¬ÒòÎªÓÐ³ÂÆôãäµÄÀý×ÓÔÚ£¬»úÆ÷Âí´ïÒ»Ïò
 £¬²»ÖªµÀÓÐ¶àÉÙÑø²Ï×öË¿ÈËÐÄ¾ªÈâÌø¡£
 <hr>
-<a href="hongding20.html">ÏÂÒ»½Ú</a> <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="hongding20.html">ÏÂÒ»½Ú</a> <a href="content.html">»ØÄ¿Â¼</a>
 
