--- a/ebooks/modern/history_gy/huxueyan/hongding20.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding20.html
@@ -1447,5 +1447,5 @@
 <p>
 　　“象张振轩就是。”
 <hr>
-<a href="hongding21.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding21.html">下一节</a> <a href="content.html">回目录</a>
 
