--- a/ebooks/modern/history_gy/huxueyan/hongding21.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding21.html
@@ -828,5 +828,5 @@
 驻韩公使花房义质亦回汉城，向韩国提出赔偿的交涉，这不是吴长庆的事；他将
 大营移驻东门外关帝庙以后，随即行文北洋，奏请论功行赏。
 <hr>
-<a href="hongding22.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding22.html">下一节</a> <a href="content.html">回目录</a>
 
