--- a/ebooks/modern/history_gy/huxueyan/hongding22.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding22.html
@@ -528,5 +528,5 @@
 ，以求和为宜。恭王懂他的用意，奏请准如所请；于是李鸿章在三月底专轮到了
 上海，驻节天后宫行辕。
 <hr>
-<a href="hongding23.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding23.html">下一节</a> <a href="content.html">回目录</a>
 
