--- a/ebooks/modern/history_gy/huxueyan/hongding23.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding23.html
@@ -514,5 +514,5 @@
 <p>
 　　“你看着好了！”他在心里说：“‘倒翻狗食盆，大家吃不成。’”
 <hr>
-<a href="hongding24.html">下一节</a> <a href="_content.html">回目录</a>
+<a href="hongding24.html">下一节</a> <a href="content.html">回目录</a>
 
