--- a/ebooks/modern/history_gy/huxueyan/hongding24.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding24.html
@@ -768,5 +768,5 @@
 <p>
 ¡¡¡¡¹ÅÓ¦´º×ÐÏ¸ÏëÁËÏëËµ£º¡°ÎÒ¶®ÁË¡£¡±
 <hr>
-<a href="hongding25.html">ÏÂÒ»½Ú</a> <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="hongding25.html">ÏÂÒ»½Ú</a> <a href="content.html">»ØÄ¿Â¼</a>
 
