--- a/ebooks/modern/history_gy/huxueyan/hongding25.html
+++ b/ebooks/modern/history_gy/huxueyan/hongding25.html
@@ -1365,5 +1365,5 @@
 Ê××ù£»Æß¹ÃÄÌÄÌÒòÎª²»ÄÍ¾Ã×ø£¬ÐÐ¶¯Ò²²»±ã£¬ÌØÒâÃüÈðÏã´ú×÷Ö÷ÈË£¬Õâ×ÔÈ»ÊÇÌ§
 ¾ÙËýµÄÒâË¼¡£ÂÝòÏÌ«Ì«Ò²¾õµÃºÜÓÐÃæ×Ó£¬²»ÓÉµÃÓÖÏëµ½ÁËåµ±¾³££¬¶¼¿÷Ëû°²ÅÅ£¬
 ²ÅÄÜ·ç·ç¹â¹â¼ÞÁËÈðÏã£¬ÁËÈ´Ò»×®ÐÄÊÂ£¬³ÉÈ«ÁËÖ÷æ¾Ö®Çé¡£
-È«ÎÄÍê <a href="_content.html">»ØÄ¿Â¼</a>
+È«ÎÄÍê <a href="content.html">»ØÄ¿Â¼</a>
 
