--- a/ebooks/modern/history_gy/dongxiaowan/dxw01.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw01.html
@@ -366,5 +366,5 @@
 　　长期的厄运和窘迫的生活养成了他对身外之事禁若寒蝉或答非所问的态度，但客人们不
 难从他的吱唔其辞中，知道北方已燃起战火，天下已开始动荡不安。
 <p>
-<a href="dxw02.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw02.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
