--- a/ebooks/modern/history_gy/dongxiaowan/dxw02.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw02.html
@@ -743,5 +743,5 @@
 哗哗声从她身下流过。这条河听惯了太多女人的呻吟，它不在乎承受更多处女的血。它本身
 就是一位涂着胭脂的妖冶魔女。灯影绰约，浆声忧怨，夜色雾一般宁静。
 <p>
-<a href="dxw03.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw03.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
