--- a/ebooks/modern/history_gy/dongxiaowan/dxw03.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw03.html
@@ -659,5 +659,5 @@
 起，凡是来求见的人都回说身体不舒服。”说完便使劲关上门。陈大娘望着门上晃荡的锁
 扣，难过得流下泪来。什么样的命运可以拯救宝贝女儿呢？
 <p>
-<a href="dxw04.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw04.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
