--- a/ebooks/modern/history_gy/dongxiaowan/dxw04.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw04.html
@@ -574,5 +574,5 @@
 摇董小宛。董小宛醒来时，脸颊上挂着一颗泪珠。惜惜看见泪珠里有自己那张脸，略有变
 形。而董小宛梦中的情郎终于有了一个名字。
 <p>
-<a href="dxw05.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw05.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
