--- a/ebooks/modern/history_gy/dongxiaowan/dxw05.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw05.html
@@ -675,5 +675,5 @@
 　　吴荣无奈，四处打听。众人见是朱爵爷的手下，早已躲得远远的，吴荣又去哪里打听
 呢？
 <p>
-<a href="dxw06.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw06.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
