--- a/ebooks/modern/history_gy/dongxiaowan/dxw06.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw06.html
@@ -675,5 +675,5 @@
 　　于是，那些街坊邻居将单妈的话又加油添醋增加了许多悲惨情节传播开去。良心冲动使
 他们自发地要来保护这个美丽的可怜人，董小宛就这样从骚扰之中抢回来一些宁静时光。
 <p>
-<a href="dxw07.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw07.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
