--- a/ebooks/modern/history_gy/dongxiaowan/dxw07.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw07.html
@@ -806,5 +806,5 @@
 <p>
 　　彼君子兮，一日不见，如隔三秋。
 <p>
-<a href="dxw08.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw08.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
