--- a/ebooks/modern/history_gy/dongxiaowan/dxw09.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw09.html
@@ -709,5 +709,5 @@
 　　冒辟疆在对岸不停地挥手，然后打马往北而去。陈君悦和龙兰直看到灰尘淹没了他的背
 影。
 <p>
-<a href="dxw10.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw10.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
