--- a/ebooks/modern/history_gy/dongxiaowan/dxw10.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw10.html
@@ -650,5 +650,5 @@
 　　冒辟疆置身这江南之地，就像在家一样，思乡之情犹可忍受，但是对董小宛的思念之情
 却无法排谴。
 <p>
-<a href="dxw11.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw11.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
