--- a/ebooks/modern/history_gy/dongxiaowan/dxw12.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw12.html
@@ -771,5 +771,5 @@
 　　董小宛并非只知儿女情长而不明事理的女人，心知他说得有理，却又不甘心再度分别。
 所以只是默默不语。冒辟疆看见她眼角流下泪来。
 <p>
-<a href="dxw13.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw13.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
