--- a/ebooks/modern/history_gy/dongxiaowan/dxw13.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw13.html
@@ -658,5 +658,5 @@
 　　在宗新一行闪进屋时，后面传来陈阿大高声叫骂：“妈的宗新，你这狗娘养的，看老子
 不把你宰了。”
 <p>
-<a href="dxw14.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw14.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
