--- a/ebooks/modern/history_gy/dongxiaowan/dxw14.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw14.html
@@ -1099,5 +1099,5 @@
 亮没有勾起她的什么回忆，唯一使她想起的是她向往的秦淮河。在月上中天的时候，她经不
 住睡意的侵袭，在给董旻拿了件衣服后便回房睡下了。
 <p>
-<a href="dxw15.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw15.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
