--- a/ebooks/modern/history_gy/dongxiaowan/dxw15.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw15.html
@@ -688,5 +688,5 @@
 处在捕头严密监视之下。霍华听完霍和的介绍，什么话也没有说，带着霍和和景尚天就从后
 门奔出霍府。此时，他们已是网中之鱼，刚奔出后门，便被一队官士擒住。
 <p>
-<a href="dxw16.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw16.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
