--- a/ebooks/modern/history_gy/dongxiaowan/dxw16.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw16.html
@@ -681,5 +681,5 @@
 　　第二天早上，董小宛睡意朦胧中觉得有人在看自己，猛地睁开眼。苏元芳正看得出神，
 回避不及，只得红着脸说：“宛妹妹，你真美。”
 <p>
-<a href="dxw17.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw17.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
