--- a/ebooks/modern/history_gy/dongxiaowan/dxw18.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw18.html
@@ -818,5 +818,5 @@
 　　为了解闷，有人唱起了一首歌谣，就是那首有名的《浪子归家》。音调唱得不够准确，
 但却另有一种质朴、忧伤的风情。董小宛在单妈的臂弯里睡着了。
 <p>
-<a href="dxw19.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw19.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
