--- a/ebooks/modern/history_gy/dongxiaowan/dxw19.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw19.html
@@ -1035,5 +1035,5 @@
 默着。良久，她才回过头来，管家已经死了，尸体吊在空中微微荡动，吐出长长的舌头，看
 气色好像没死。
 <p>
-<a href="dxw20.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw20.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
