--- a/ebooks/modern/history_gy/dongxiaowan/dxw20.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw20.html
@@ -531,5 +531,5 @@
 <p>
 　　一场轰轰烈烈的争斗终以弱方的英才被斩尽杀绝而收场。
 <p>
-<a href="dxw21.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw21.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
