--- a/ebooks/modern/history_gy/dongxiaowan/dxw21.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw21.html
@@ -562,5 +562,5 @@
 当天，冒辟疆便逃避他乡。董小宛站在星空之下，心里惴惴不安，总觉得有更不测的凶恶命
 运正冲着自己而来，她将无法逃避。
 <p>
-<a href="dxw22.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw22.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
