--- a/ebooks/modern/history_gy/dongxiaowan/dxw22.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw22.html
@@ -768,5 +768,5 @@
 <p>
 　　“那再好不过了，恐怕没那么容易。洪承畴像是铁了心似的，除非发生异外……”
 <p>
-<a href="dxw23.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw23.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
