--- a/ebooks/modern/history_gy/dongxiaowan/dxw23.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw23.html
@@ -441,5 +441,5 @@
 <p>
 　　“我一辈子也忘不掉那片透明的白指甲。”董小宛自言自语地道。
 <p>
-<a href="dxw24.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw24.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
