--- a/ebooks/modern/history_gy/dongxiaowan/dxw24.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw24.html
@@ -810,5 +810,5 @@
 <p>
 　　                               （全书完）
 <p>
-<a href="_content.html">回目录</a>
+<a href="content.html">回目录</a>
 </body></html>
