--- a/ebooks/modern/history_gy/dongxiaowan/dxw08.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw08.html
@@ -765,5 +765,5 @@
 <p>
 　　董小宛抱住单妈放声大哭，一家人就抱住一堆哭了个够。
 <p>
-<a href="dxw09.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw09.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
