--- a/ebooks/modern/history_gy/dongxiaowan/dxw11.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw11.html
@@ -627,5 +627,5 @@
 <p>
 　　真是无处话凄凉。
 <p>
-<a href="dxw12.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw12.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
