--- a/ebooks/modern/history_gy/dongxiaowan/dxw17.html
+++ b/ebooks/modern/history_gy/dongxiaowan/dxw17.html
@@ -481,5 +481,5 @@
 得爱惜。瞧他多瘦啦！”董小宛主动将所有的过错揽到自己身上。苏元芳倍受感动，为自己
 的自私想法羞愧不已。从此，俩人相处更合睦了。冒辟疆也从无形的争夺中解放出来。
 <p>
-<a href="dxw18.html">下一章</a>  <a href="_content.html">回目录</a>
+<a href="dxw18.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
