--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh01.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh01.html
@@ -470,5 +470,5 @@
 <p>
 　　关系深到帮中的秘密都可相供，看来这孙祥太着实听小张的话。刘不才宽心之
 余，少不得还要打听打听，孙祥太究竟是欠了他怎样一个大人情？
-<hr><a href="eyjh02.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh02.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
