--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh02.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh02.html
@@ -534,5 +534,5 @@
 　　“是的。”带路的人说，“前面就是。”
 <p>
 　　这句话就如仙丹，刘不才顿觉精神大振；余下的这段路，走起来就轻松了。
-<hr><a href="eyjh03.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh03.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
