--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh03.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh03.html
@@ -312,5 +312,5 @@
 <p>
 　　经他们一搭一档，自我转圆，赵正涛做“小辈”的人，而且奉命陪客，脸上当
 然不会再有悻悻然之色。随即讲了县官做郎中的故事。
-<hr><a href="eyjh04.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh04.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
