--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh04.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh04.html
@@ -1019,5 +1019,5 @@
 　　答应是答应了，但这个办法很难想，同时研究案情也觉得其中大有蹊跷；本来
 不想多事，现在看起来非多事不可。尤其牵涉邵百万家这件案子是“肥猪拱门”，
 不好好动一动脑筋，未免可惜。
-<hr><a href="eyjh05.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh05.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
