--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh06.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh06.html
@@ -210,5 +210,5 @@
 遭受侮蔑一样，自然心里不舒服。
 <p>
 　　其实倒是小福料事比较准确，陶通判竟负所托，空手而回。
-<hr><a href="eyjh07.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh07.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
