--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh07.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh07.html
@@ -557,5 +557,5 @@
 <p>
 　　提着一只洋油“手照”走到院子角落；小张“噗”地一口，将灯吹灭，低声说
 道：“老赵，不要响，我问你句话。”
-<hr><a href="eyjh08.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh08.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
