--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh08.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh08.html
@@ -120,5 +120,5 @@
 　　打开一看，倒有两样东西：一瓶上好的“酸味洋烟”——鼻烟；一包西洋红参。
 样数虽少，东西不俗，也合于献赠长辈之用；便喊出阿招来，用张红纸包一包，挟
 了就走。
-<hr><a href="eyjh09.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh09.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
