--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh09.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh09.html
@@ -686,5 +686,5 @@
 <p>
 　　这句话在孙祥太觉得很严重，脸色都有些变了；一言不发，斟满了一杯酒，然
 后取出一把“解手刀”，伸出左手小指，用刀尖一刺一挤，沥了几滴在酒里。
-<hr><a href="eyjh10.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh10.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
