--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh10.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh10.html
@@ -88,5 +88,5 @@
 <p>
 　　谈到这里，只听寒鸡午夜啼；小张空然而起，“冬天夜长，到底熬过半夜了！”
 他说：“去睡一觉；养精蓄锐，到天亮了，协力同心，好办大事。”
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
