--- a/ebooks/modern/history_gy/enyuanjianghu/eyjh05.html
+++ b/ebooks/modern/history_gy/enyuanjianghu/eyjh05.html
@@ -1022,5 +1022,5 @@
 　　小福答应一声：“是！”
 <p>
 　　“你叫刑书进来。”
-<hr><a href="eyjh06.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="eyjh06.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
