--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq01.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq01.html
@@ -132,5 +132,5 @@
 自辩非汪；还是怀着"国士待我，国士报之"的心情，有意不答，以其替汪而死？
 <p>
 <hr>
-<a href="fmcq02.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq02.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
