--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq02.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq02.html
@@ -1413,5 +1413,5 @@
 　　"很顺利！"劳伦斯说，"潘先生人很好。谢谢你，替我介绍。"
 <p>
 <hr>
-<a href="fmcq03.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq03.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
