--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq03.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq03.html
@@ -685,5 +685,5 @@
 "启碇南归。
 <p>
 <hr>
-<a href="fmcq04.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq04.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
