--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq04.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq04.html
@@ -952,5 +952,5 @@
 　　周佛海实在笑不出来；只好唇角牵动了几下，勉强装出一个比笑还难看的笑容。
 <p>
 <hr>
-<a href="fmcq05.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq05.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
