--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq05.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq05.html
@@ -433,5 +433,5 @@
 一块地皮，找建筑师打了图样，克日兴工。
 <p>
 <hr>
-<a href="fmcq06.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq06.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
