--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq06.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq06.html
@@ -678,5 +678,5 @@
 上有4个饭局，无法分身；此刻倒有工夫。于是约定在大光明电影院的咖啡室见面。
 <p>
 <hr>
-<a href="fmcq07.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq07.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
