--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq12.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq12.html
@@ -499,5 +499,5 @@
 　　于是他想起一个人：熊剑东；想起一支部队：税警团。
 <p>
 <hr>
-<a href="fmcq13.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq13.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
