--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq13.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq13.html
@@ -496,5 +496,5 @@
 噤声，在内心自危而已。
 <p>
 <hr>
-<a href="fmcq14.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq14.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
