--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq14.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq14.html
@@ -409,5 +409,5 @@
 有许多对国家有关系的重要人士；特别是金融家在内。
 <p>
 <hr>
-<a href="fmcq15.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq15.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
