--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq15.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq15.html
@@ -814,5 +814,5 @@
 忘却外面的一切，专心一致将注意力投入个人感情中度过的。
 <p>
 <hr>
-<a href="fmcq16.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq16.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
