--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq16.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq16.html
@@ -373,5 +373,5 @@
 样也自我鉴照不到的。
 <p>
 <hr>
-<a href="fmcq17.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq17.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
