--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq17.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq17.html
@@ -408,5 +408,5 @@
 不幸的是第三战区的经济特派员平祖仁夫妇，双双为76号逮捕了。
 <p>
 <hr>
-<a href="fmcq18.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq18.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
