--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq18.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq18.html
@@ -136,5 +136,5 @@
 潮水样涌向万国殡仪馆，吊唁英茵的人群而传播开来了。
 <p>
 <hr>
-<a href="fmcq19.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq19.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
