--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq19.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq19.html
@@ -478,5 +478,5 @@
 港跟重庆政府代表接触的话，徐采丞方始明白，所谓"桐工作"是怎么一回事？"
 <p>
 <hr>
-<a href="fmcq20.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq20.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
