--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq24.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq24.html
@@ -549,5 +549,5 @@
 在主张和平的人，都没有料到；否则就不致于有眼前暂时分裂的现象。"
 <p>
 <hr>
-<a href="fmcq25.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq25.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
