--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq25.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq25.html
@@ -910,5 +910,5 @@
 熟了，才去相拥入梦。梦回时，曙色已从窗帘的缝隙中悄悄溜进来了。
 <p>
 <hr>
-<a href="fmcq26.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq26.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
