--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq27.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq27.html
@@ -372,5 +372,5 @@
 打自己的手心，作为忏悔的表示。
 <p>
 <hr>
-<a href="fmcq28.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq28.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
