--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq29.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq29.html
@@ -959,5 +959,5 @@
 断线，都成了煞费猜疑的谜。
 <p>
 <hr>
-<a href="fmcq30.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq30.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
