--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq30.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq30.html
@@ -376,5 +376,5 @@
 的一件事。
 <p>
 <hr>
-<a href="fmcq31.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq31.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
