--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq31.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq31.html
@@ -338,5 +338,5 @@
 请昭和天皇继续预定的旅程。
 <p>
 <hr>
-<a href="fmcq32.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq32.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
