--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq32.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq32.html
@@ -477,5 +477,5 @@
 他是大智若愚，城府很深。"
 <p>
 <hr>
-<a href="fmcq33.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq33.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
