--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq33.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq33.html
@@ -503,5 +503,5 @@
 得将来无可挽回。"
 <p>
 <hr>
-<a href="fmcq34.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq34.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
