--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq34.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq34.html
@@ -383,5 +383,5 @@
 　　挂断电话，金雄白与彭兆章相约；请他明天早来，参预这件事。
 <p>
 <hr>
-<a href="fmcq35.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq35.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
