--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq38.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq38.html
@@ -482,5 +482,5 @@
 个儿子及血型相同的侍从，各输血500ＣＣ，却仍无补于已入膏肓的痼疾。
 <p>
 <hr>
-<a href="fmcq39.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq39.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
