--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq40.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq40.html
@@ -357,5 +357,5 @@
 没有的程派"私房戏"，无奈办不到，只好忍气吞声，铩羽而去。
 <p>
 <hr>
-<a href="fmcq41.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq41.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
