--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq41.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq41.html
@@ -678,5 +678,5 @@
 以为鸿鹄之将至；不但相信缪斌所卖的"膏药"，而且确实寄予极深的期望。
 <p>
 <hr>
-<a href="fmcq42.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq42.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
