--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq42.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq42.html
@@ -379,5 +379,5 @@
 不但早已视"将在外，君命有所不受"为必然之理；甚至以为军部的命令亦可不理。
 <p>
 <hr>
-<a href="fmcq43.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq43.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
