--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq43.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq43.html
@@ -237,5 +237,5 @@
 "；日子是11月19、20日。
 <p>
 <hr>
-<a href="fmcq44.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq44.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
