--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq44.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq44.html
@@ -335,5 +335,5 @@
 面准备去研究如何造成"国民组织"，作为他第二次组阁的基础。
 <p>
 <hr>
-<a href="fmcq45.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq45.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
