--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq49.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq49.html
@@ -683,5 +683,5 @@
 车，跨上一辆三轮车，往北而去，渐渐消失在人海之中，无影无踪了。
 <p>
 <hr>
-<a href="fmcq50.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq50.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
