--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq07.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq07.html
@@ -140,5 +140,5 @@
 没有工夫；有工夫亦不敢随便出门，原来彼此报复性的暗杀行动又热闹了。
 <p>
 <hr>
-<a href="fmcq08.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq08.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
