--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq08.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq08.html
@@ -756,5 +756,5 @@
 补了一枪。看她腿一伸不动了，林之江才抹抹额上的汗，喘了口大气。
 <p>
 <hr>
-<a href="fmcq09.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq09.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
