--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq09.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq09.html
@@ -328,5 +328,5 @@
 　　这是个僻姓，金雄白不必再多问了；"我知道是谁。"他说："跑社会新闻的。"
 <p>
 <hr>
-<a href="fmcq10.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq10.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
