--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq10.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq10.html
@@ -325,5 +325,5 @@
 不可，因为当事人是周佛海的妻子杨淑慧。
 <p>
 <hr>
-<a href="fmcq11.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq11.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
