--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq11.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq11.html
@@ -604,5 +604,5 @@
 从未拆穿过西洋镜。
 <p>
 <hr>
-<a href="fmcq12.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq12.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
