--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq20.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq20.html
@@ -383,5 +383,5 @@
 回重庆，转达日本的条件；有了结果，会通知今井，约期再晤。
 <p>
 <hr>
-<a href="fmcq21.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq21.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
