--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq21.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq21.html
@@ -204,5 +204,5 @@
 "
 <p>
 <hr>
-<a href="fmcq22.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq22.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
