--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq22.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq22.html
@@ -680,5 +680,5 @@
 叶终于未曾落下来。
 <p>
 <hr>
-<a href="fmcq23.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq23.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
