--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq23.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq23.html
@@ -246,5 +246,5 @@
 　　"很好！民华公司现在就成立了。"
 <p>
 <hr>
-<a href="fmcq24.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq24.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
