--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq26.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq26.html
@@ -590,5 +590,5 @@
 有什么保留。请你跟雄白兄谈吧！"
 <p>
 <hr>
-<a href="fmcq27.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq27.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
