--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq28.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq28.html
@@ -801,5 +801,5 @@
 个"属于对方；自己的"一个"要晚上才来把心都放下了。
 <p>
 <hr>
-<a href="fmcq29.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq29.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
