--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq35.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq35.html
@@ -621,5 +621,5 @@
 熟的舞女出来吃消夜。到时候再订后约。
 <p>
 <hr>
-<a href="fmcq36.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq36.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
