--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq36.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq36.html
@@ -978,5 +978,5 @@
 　　"好！我知道了。"
 <p>
 <hr>
-<a href="fmcq37.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq37.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
