--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq37.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq37.html
@@ -619,5 +619,5 @@
 一定等不到了。"
 <p>
 <hr>
-<a href="fmcq38.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq38.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
