--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq39.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq39.html
@@ -347,5 +347,5 @@
 之一的袁复登。
 <p>
 <hr>
-<a href="fmcq40.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq40.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
