--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq45.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq45.html
@@ -359,5 +359,5 @@
 部会议"。
 <p>
 <hr>
-<a href="fmcq46.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq46.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
