--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq46.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq46.html
@@ -580,5 +580,5 @@
 获，把戏拆穿，国际间引为笑谈。
 <p>
 <hr>
-<a href="fmcq47.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq47.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
