--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq47.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq47.html
@@ -623,5 +623,5 @@
 东条嗤之以鼻，他说：区区硫磺岛之战，即已花费了美军4年的时间。
 <p>
 <hr>
-<a href="fmcq48.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq48.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
