--- a/ebooks/modern/history_gy/fenmochunqiu/fmcq48.html
+++ b/ebooks/modern/history_gy/fenmochunqiu/fmcq48.html
@@ -758,5 +758,5 @@
 应该是曲突徙薪的上客。"
 <p>
 <hr>
-<a href="fmcq49.html">下一节</a>  <a href="_content.html">回目录</a>
+<a href="fmcq49.html">下一节</a>  <a href="content.html">回目录</a>
 </body></html>
