--- a/ebooks/modern/history_gy/tiying/tiying01.html
+++ b/ebooks/modern/history_gy/tiying/tiying01.html
@@ -475,5 +475,5 @@
 <p>
 　　“好极了，好极了！”阳庆不胜欣赏地称赞，“数百年来，天下之医，盛称
 ‘秦派’，如今看来，‘齐派’要取而代之了！”
-<hr><a href="tiying02.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying02.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
