--- a/ebooks/modern/history_gy/tiying/tiying03.html
+++ b/ebooks/modern/history_gy/tiying/tiying03.html
@@ -1092,5 +1092,5 @@
 个人好了！”卫媪这样回答。
 <p>
 　　从此，朱文以及朱文所带来的烦恼，在淳于意家算是消失了。
-<hr><a href="tiying04.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying04.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
