--- a/ebooks/modern/history_gy/tiying/tiying04.html
+++ b/ebooks/modern/history_gy/tiying/tiying04.html
@@ -1726,5 +1726,5 @@
 能够忍受，却又何苦如此伤爱女的心？
 <p>
 　　这样想着，唯有黯然长叹，深深点一点头。他的心境就尽在不言中了。
-<hr><a href="tiying05.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying05.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
