--- a/ebooks/modern/history_gy/tiying/tiying05.html
+++ b/ebooks/modern/history_gy/tiying/tiying05.html
@@ -256,5 +256,5 @@
 <p>
 　　果然，卫媪老谋深算，是个靠得住的人。“贵人远行，当然会有安排”，说得
 一点不错，看来大可放心了，宋邑这样在想。
-<hr><a href="tiying06.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying06.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
