--- a/ebooks/modern/history_gy/tiying/tiying06.html
+++ b/ebooks/modern/history_gy/tiying/tiying06.html
@@ -498,5 +498,5 @@
 　　缇萦不置可否，而心里却真的信了李香的话，想起去年秋天，他那神出鬼没的
 行踪，不由得生了希冀之心。睡梦中不时惊醒，一声猫叫，一阵淅沥的风雨，都会
 使她悬起了心，屏息着细听动静，怕的是朱文来了。
-<hr><a href="tiying07.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying07.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
