--- a/ebooks/modern/history_gy/tiying/tiying07.html
+++ b/ebooks/modern/history_gy/tiying/tiying07.html
@@ -2371,5 +2371,5 @@
 <p>
 　　卫媪未曾开口，只深深地点一点头。从此刻起，她重新体认了自己的责任和淳
 于意对她的期望，立下事不成不生还的决心。
-<hr><a href="tiying08.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying08.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
