--- a/ebooks/modern/history_gy/tiying/tiying08.html
+++ b/ebooks/modern/history_gy/tiying/tiying08.html
@@ -861,5 +861,5 @@
 　　但是，缇萦还是要原谅二姊和四姊，说来说去，她们也是为了爹爹——她唯有
 这样想去，才能把自己的情绪平复下来。可是，她无法不借眼泪，来流泻出她心中
 的悲伤。
-<hr><a href="tiying09.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying09.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
