--- a/ebooks/modern/history_gy/tiying/tiying09.html
+++ b/ebooks/modern/history_gy/tiying/tiying09.html
@@ -3347,5 +3347,5 @@
 　　如水满则溢，蓄积在缇萦心中的、无数的关于朱文的往事、感觉、想象——不
 管是恩怨爱憎，此时都化作一股不可遏制的冲动，叫一声“阿文”，一扑扑在他怀
 中！
-<hr><a href="tiying10.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying10.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
