--- a/ebooks/modern/history_gy/tiying/tiying10.html
+++ b/ebooks/modern/history_gy/tiying/tiying10.html
@@ -993,5 +993,5 @@
 这里好了。一切由我招待。”
 <p>
 　　“谢谢！”朱文的不快消失了，欣然举杯。
-<hr><a href="tiying11.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying11.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
