--- a/ebooks/modern/history_gy/tiying/tiying12.html
+++ b/ebooks/modern/history_gy/tiying/tiying12.html
@@ -359,5 +359,5 @@
 　　说着仪态优雅地顿首致谢。刘端和孔石风答礼告退，他们算是轻易地完成了朱
 文所托付的任务，然而他们并无轻松之感，相反地，心头如压了块铅似的，觉得十
 分沉重。
-<hr><a href="tiying13.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying13.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
