--- a/ebooks/modern/history_gy/tiying/tiying13.html
+++ b/ebooks/modern/history_gy/tiying/tiying13.html
@@ -391,5 +391,5 @@
 <p>
 　　“我也不会！决不会！”缇萦复诵着他的话，心境异乎寻常地平静，她有完全
 的把握，再长的日子，她也能耐心等待，等待朱文归来。
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
