--- a/ebooks/modern/history_gy/tiying/tiying02.html
+++ b/ebooks/modern/history_gy/tiying/tiying02.html
@@ -505,5 +505,5 @@
 　　宋邑无奈，只好想出些话来百般劝慰，而淳于意始终悒郁不欢，天气又热，这
 一个下午和一个晚上，可真是难挨。第二天一早，淳于意一个人凄凄凉凉回阳虚去
 了。
-<hr><a href="tiying03.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying03.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
