--- a/ebooks/modern/history_gy/tiying/tiying11.html
+++ b/ebooks/modern/history_gy/tiying/tiying11.html
@@ -632,5 +632,5 @@
 　　“我正在想。”
 <p>
 　　朱文没有再说话，点点头去解下自己的马。
-<hr><a href="tiying12.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="tiying12.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
