--- a/ebooks/modern/history_gy/zhende/zdwj01.html
+++ b/ebooks/modern/history_gy/zhende/zdwj01.html
@@ -1189,5 +1189,5 @@
 请李和派出人来，亲自带着，到吴家说明缘由，毫不费事地占了人家五进房子。同
 时派出大批得力部下，分头办事，又关照司库要钱、要米，尽量支给。人多钱多，
 容易办事，太阳下山之时，诸事皆已粗备，可以准备接驾了。
-<hr><a href="zdwj02.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="zdwj02.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
