--- a/ebooks/modern/history_gy/zhende/zdwj03.html
+++ b/ebooks/modern/history_gy/zhende/zdwj03.html
@@ -1197,5 +1197,5 @@
 <p>
 　　皇帝是很任性的人，臣下越争得厉害，他越不肯听从。石天柱的奏疏，依然留
 中不发，而含芳的肚子却一天比一天大了。
-<hr><a href="zdwj04.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="zdwj04.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
