--- a/ebooks/modern/history_gy/zhende/zdwj04.html
+++ b/ebooks/modern/history_gy/zhende/zdwj04.html
@@ -927,5 +927,5 @@
 他一句：“有国法在！”
 <p>
 　　宸濠到这时才知道性命难保，可是悔之晚了！
-<hr><a href="zdwj05.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="zdwj05.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
