--- a/ebooks/modern/history_gy/zhende/zdwj05.html
+++ b/ebooks/modern/history_gy/zhende/zdwj05.html
@@ -1971,5 +1971,5 @@
 <p>
 　　于是，彼此指定了一名亲信，约定每日中午在兵部衙门联络。得此结果，张永
 与乔宇都很高兴；一直谈到黄昏，方始分手。
-<hr><a href="zdwj06.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="zdwj06.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
