--- a/ebooks/modern/history_gy/zhende/zdwj06.html
+++ b/ebooks/modern/history_gy/zhende/zdwj06.html
@@ -1971,5 +1971,5 @@
 　　武宗一崩，最伤心的自然是太后。但伤心之事还不止此。兴献王世子厚囗入承
 大统，以侄子的身分继承伯叔所遗留的皇位，本应继承为伯叔之子，而厚囗不愿，
 以致张太后大受困窘，晚境凄凉。这是正德外记的外记，另作别论了！
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
