--- a/ebooks/modern/history_gy/zhende/zdwj02.html
+++ b/ebooks/modern/history_gy/zhende/zdwj02.html
@@ -2538,5 +2538,5 @@
 舍不得回宫了。
 <p>
 　　            ※              ※                ※
-<hr><a href="zdwj03.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="zdwj03.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
