--- a/ebooks/modern/history_gy/muzijunchen/mzjc01.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc01.html
@@ -741,5 +741,5 @@
 重。爱妻良朋的殷殷情意，梁鼎芬不能不接受，但不知怎么，越来越觉得自己身处
 局外，象是在听朋友夫妇规劝似的。
 </pre></ul></ul>
-<a href="mzjc02.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc02.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
