--- a/ebooks/modern/history_gy/muzijunchen/mzjc02.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc02.html
@@ -1171,5 +1171,5 @@
 <p>
 　　“樵野！听君一句话，胜读十年书。我知我何以自处矣！”
 </pre></ul></ul>
-<a href="mzjc03.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc03.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
