--- a/ebooks/modern/history_gy/muzijunchen/mzjc03.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc03.html
@@ -1373,5 +1373,5 @@
 　　翁同龢也收红包，不过是有选择的，象李鸿章这样的人，自然无须客气，“中
 堂厚赐，实在受之有愧。”他接了过来，顺手交给听差。
 </pre></ul></ul>
-<a href="mzjc04.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc04.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
