--- a/ebooks/modern/history_gy/muzijunchen/mzjc04.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc04.html
@@ -1233,5 +1233,5 @@
 而婉，暗中点到，从不伤慈禧太后的面子。因此，遇着这样一件棘手的事，她虽义
 不容辞地一肩承担了下来，却不敢操切从事，只是默默盘算，耐心地在等机会。
 </pre></ul></ul>
-<a href="mzjc05.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc05.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
