--- a/ebooks/modern/history_gy/muzijunchen/mzjc05.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc05.html
@@ -1252,5 +1252,5 @@
 　　翁同龢认为请皇太后训政，不如请暂缓归政，比较得体，但已经碰了两个钉子，
 不便再开口。回家以后，通前彻后想了一遍，决定另外上折。
 </pre></ul></ul>
-<a href="mzjc06.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc06.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
