--- a/ebooks/modern/history_gy/muzijunchen/mzjc06.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc06.html
@@ -1203,5 +1203,5 @@
 功于徐延祚，他本人虽被排挤，他的看法却为御医所袭用，摒弃凉药，注重温补。
 只是“病来如山倒，病去如抽丝”，一直到第二年三月底才能起床。
 </pre></ul></ul>
-<a href="mzjc07.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc07.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
