--- a/ebooks/modern/history_gy/muzijunchen/mzjc07.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc07.html
@@ -1134,5 +1134,5 @@
 　　慈禧太后不即答言，脸上却是欣慰的神情，好半天，才点点头说：“他能这么
 想，心里总算明白。往后有他的好处。”
 </pre></ul></ul>
-<a href="mzjc08.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc08.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
