--- a/ebooks/modern/history_gy/muzijunchen/mzjc08.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc08.html
@@ -1271,5 +1271,5 @@
 　　慢慢心静下来了。可是其他的幻影消失，唯有珍嫔娇憨的神态，盘旋在脑际不
 去。
 </pre></ul></ul>
-<a href="mzjc09.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc09.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
