--- a/ebooks/modern/history_gy/muzijunchen/mzjc09.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc09.html
@@ -1236,5 +1236,5 @@
 她含含糊糊地，没有肯定的答复。这是看看再说的意思，而王有却误会了，以为珍
 嫔只是在等机会向皇帝进言。
 </pre></ul></ul>
-<a href="mzjc10.html">下一部分</a>  <a href="_content.html">回目录</a>
+<a href="mzjc10.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
