--- a/ebooks/modern/history_gy/muzijunchen/mzjc10.html
+++ b/ebooks/modern/history_gy/muzijunchen/mzjc10.html
@@ -645,5 +645,5 @@
 　　“飞吧！飞得高、飞得远，飞个好样儿的我看！”说着，慈禧太后站起身来走
 了，沉着地踩着“花盆底”，洒落背上的冉冉斜阳，悄悄没入阴暗之中。
 </pre></ul></ul>
-<a href="_content.html">回目录</a>
+<a href="content.html">回目录</a>
 </body></html>
